Corrected problem with z-index and hover

--- a/Day1/css/fresht-shirt.css
+++ b/Day1/css/fresht-shirt.css
@@ -63,6 +63,7 @@ li:hover{
   border: solid #63A3DC 3px;
   background-color: white;
   opacity: 0;
+  z-index: -1;
 }
 
 .sizechart li{
@@ -77,6 +78,7 @@ li:hover{
   bottom: 100%;
   opacity: 1;
   transition: 0.7s;
+  z-index: 1;
 }
 
 .colorchart{
@@ -88,6 +90,7 @@ li:hover{
   border: solid #63A3DC 3px;
   background-color: white;
   opacity: 0;
+  z-index: -1;
 }
 
 .colorchart li{
@@ -102,6 +105,7 @@ li:hover{
   bottom: 100%;
   opacity: 1;
   transition: 0.7s;
+  z-index: 1;
 }
 
 .firstbutton{
